--- a/modulo01/text.css
+++ b/modulo01/text.css
@@ -1,6 +1,8 @@
 p {
   color: blueviolet;
+  text-indent: 30px;
   text-transform: uppercase;
+  line-height: 25px; /* linha esoaçamento*/
 }
 h1 {
   text-align: left;
