--- a/modulo01/bozSize&BoxShadow.css
+++ b/modulo01/bozSize&BoxShadow.css
@@ -3,5 +3,24 @@
     width: 300px;
     padding: 20px;
     box-sizing: border-box;
-    box-shadow: 10px 10px 5px black;
+    box-shadow: 10px 10px 15px black;
 }
+
+/* prestação de serviço
+
+rg, cpf, comprovante de residencia. resumo. 
+capital 5 mil
+ME
+3 milhoes ano
+sociedade anonina
+certificado digital assinatura
+
+prioritação 1500 reais no ponto
+certificado digital por 155 reais
+
+nota fiscal...... 
+
+razao social: vinicios
+fantasia: ivc tecnologia
+
+*/
