--- a/modulo01/bozSize&BoxShadow.css
+++ b/modulo01/bozSize&BoxShadow.css
@@ -1,11 +1,15 @@
 .conteudo{
     background-color: red;
     width: 300px;
+    height: 100px;
     padding: 20px;
     box-sizing: border-box;
     box-shadow: 10px 10px 15px black;
+    overflow: auto;
 }
-
+p{
+    opacity: 0.2;
+}
 /* prestação de serviço
 
 rg, cpf, comprovante de residencia. resumo. 
