--- a/modulo01/bozSize&BoxShadow.css
+++ b/modulo01/bozSize&BoxShadow.css
@@ -1,14 +1,23 @@
+*{
+    font-size: 100%;
+}
+
 .conteudo{
     background-color: red;
     width: 300px;
-    height: 100px;
+    height: 300px;
     padding: 20px;
     box-sizing: border-box;
     box-shadow: 10px 10px 15px black;
     overflow: auto;
+    border-radius: 20px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1em;
+
 }
 p{
-    opacity: 0.2;
+    opacity: 1;
 }
 /* prestação de serviço
 
